fixes width on search input on safari

--- a/src/components/form/search/search.scss
+++ b/src/components/form/search/search.scss
@@ -21,6 +21,7 @@
     font-size: inherit;
     font-family: inherit;
     line-height: inherit;
+    width: 100%;
 
     &:hover {
       border: 2px solid colors.$blue-contrast !important;
